<resources>
    <string name="app_name">BethelSchoolApp</string>
    <string name="about_us">About us</string>
    <string name="intro">The school building is named to honour Dr. William Scott (General Director, IBL, and Chennai) and Dr. (Mrs.) Joyce M Scott (Director, Literacy India Trust Chennai) who have rendered noble services in the field education and social development schemes for over 50 years in our land.</string>
<string name="intro1">The School remains ever grateful to the graceful gesture of our well wisher Dr. William Scott who helped in arranging a project grant for the School and merciful God Almighty for having provided us a new school building, Dr. WILLIAM SCOTT BLOCK at Water Tank Road, Ayanavaram in August 1983 with spacious class rooms, computer room, Laboratories and library halls</string>
    <string name="arise">Arise and Shine</string>
    <string name="a">Bethel Matriculation Higher Secondary School is a unit of BFGM Charitable Trust-Registered as a Public Charitable non-profit Trust. The motto of the School is “Arise and Shine”. The aims and objectives of the Trust are to promote education in both urban and rural areas..
</string>
    <string name="fear">Fear of the Lord</string>
    <string name="admin">Administration</string>
    <string name="c">Management and Administration may frame and issue permanent or temporary disciplinary rules from time to time to regulate the conduct of the students within the campus and outside. As such these rules are deemed necessary to maintain the decorum of education, the purpose of studies and reputation of the Institution..</string>
    <string name="b">The School is run by a Christian Management. We would like to bring up children in the ‘fear of the Lord’ and to equip them for self-reliance. Our Institution is an ideal one for children professed by well qualified and dedicated teachers. The School offers the best education at an affordable cost..</string>
</resources>
