<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/about_us"
        android:textAlignment="center"
            android:background="#ffffff"

        android:textColor="#Cf3344"
        android:textSize="36sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="92dp"
                android:layout_height="match_parent"
                android:src="@drawable/index"
                app:civ_border_width="2dp"
                android:background="#ffffff"
                app:civ_border_color="#ffffff"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro"
                android:background="#ffffff"

                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="428dp"
            android:layout_height="193dp"
            android:text="@string/intro1"
            android:background="#ffffff"

            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:background="#ffffff"
            />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:background="#03a688"
            android:textSize="36sp"
            android:text="@string/arise" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:text="@string/a"
            android:background="#03a688"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:background="#ffffff"
            />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:background="#eec02e"
            android:textSize="36sp"
            android:text="@string/fear" />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:text="@string/b"
            android:background="#eec02e"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:background="#ffffff"
            />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:background="#395396"
            android:textSize="36sp"
            android:text="@string/admin" />
        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/c"
            android:background="#395396"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>